<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where We Go</string>
    <string name="tab_my_history">My History</string>
    <string name="tab_add_place">Add Place</string>
    <string name="tab_other_places">Other Places</string>

    <string name="addPlace">Add My Place</string>
    <string name="press_long_on_place">press long on the place you want to save</string>
    
    <string name="add_place_place_name">Place</string>
    <string name="add_place_name_hint">Enter place name</string>
    <string name="add_place_category">Category</string>
    <string name="add_place_choose_category">Choose a category</string>
    <string name="add_place_rating">Rating</string>
    <string name="add_place_opinion">Opinion</string>
    <string name="add_place_opinion_hint">Enter opinion</string>
    
</resources>
