<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_place_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CC3384FF" 
    >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/add_place_place_name"
            android:textColor="@color/white"            
            />
        <EditText
            android:id="@+id/placeTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/add_place_name_hint"
            android:textColor="@color/white"
            />            
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/add_place_category"
            android:textColor="@color/white"      
            />
        <Spinner
            android:id="@+id/placeCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:prompt="@string/add_place_choose_category"
            android:textColor="@color/white"
            />        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/add_place_rating"
            android:textColor="@color/white"            
            />
        <RatingBar
            android:id="@+id/placeRating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            />        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/add_place_opinion"
            android:textColor="@color/white"
            />
        <EditText
            android:id="@+id/placeOpinion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/add_place_opinion_hint"
            android:textColor="@color/white"
            />        
    </LinearLayout>
    
    
</LinearLayout>
